# robot-lidar-fusion

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
benchmarks/: run_benchmarks.py
benchmarks/artifacts/: gazebo_static_obstacles.json  isaac_dynamic_replan.json  summary.json
benchmarks/scenarios/: README.md  gazebo_static_obstacles.yaml  isaac_dynamic_replan.yaml
calibration/: README.md  camera_intrinsics.yaml  extrinsics.yaml
config/: default.yaml
config/nav2/: nav2_params.yaml
config/navigation/: default.yaml
config/slam/: slam_toolbox.yaml
datasets/: README.md
datasets/sample_bags/: fusion_demo_sequence.json  metadata.yaml
docs/: architecture.md  integration_guide.md  quickstart.md  roadmap.md  support_matrix.md
docs/benchmarks/: simulation_validation.md
enterprise/: README.md  __init__.py
enterprise/algos/: __init__.py
enterprise/connectors/: __init__.py
examples/: basic_control_loop.py  demo_os1_camera_live.py  sensor_fusion_demo.py  stress_test.py
gateway/: README.md  __init__.py
launch/: bringup_bag_replay.launch.py  bringup_fusion.launch.py  bringup_navigation.launch.py  bringup_simulation.launch.py
robot_hw/: __init__.py  robot_config.py  robot_orchestrator.py  simulation.py  stress_simulation.py
robot_hw/ai/: __init__.py  predictive_controller.py
robot_hw/control/: __init__.py  joint_synchronization.py  locomotion_controller.py
robot_hw/core/: __init__.py  communication.py  concurrency_management.py  consistency_verification.py  environment_adapter.py  execution_stack.py  fault_detection.py  hardware_synchronization.py  hazard_manager.py  memory_management.py
robot_hw/mapping/: __init__.py  occupancy_mapping.py
robot_hw/perception/: __init__.py  calibration_loader.py  evaluation.py  lidar_utils.py  object_fusion.py  projective_fusion.py  sensor_frames.py  sensor_io_direct.py  sensor_io_ros2.py  sensor_processing.py  time_sync.py
robot_hw/planning/: __init__.py  mission_planner.py  navigation_manager.py  task_hardware_mapping.py
robot_hw/power/: __init__.py  battery_management.py  thermal_management.py
robot_hw/sim_adapters/: gazebo_adapter.py  isaac_sim_adapter.py
robot_hw/telemetry/: __init__.py  runtime_metrics.py
rviz/: default.rviz
scripts/: check_release_readiness.py  replay_demo_dataset.py  ros2_replay_publisher.py  run_robot.py
tests/: conftest.py  test_battery.py  test_communication.py  test_concurrency.py  test_config.py  test_demo_replay_dataset.py  test_fault_detection.py  test_fusion_state_contains_lidar_camera.py  test_hazard_manager.py  test_joint_synchronization.py  test_lidar_utils.py  test_locomotion.py  test_mapping_and_navigation_pipeline.py  test_memory_management.py  test_mission_planner.py  test_navigation.py  test_orchestrator_navigation_integration.py  test_predictive_controller.py  test_projective_fusion_pipeline.py  test_proximity_from_pointcloud.py  test_sensor_frames.py  test_simulation_benchmarks_and_telemetry.py  test_task_hardware_mapping.py  test_thermal.py  test_time_sync.py
