[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "robot-lidar-fusion"
version = "0.2.0"
description = "A Python-first robotics foundation for reproducible LiDAR-camera perception workflows and ROS 2-native autonomy integration."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "iceccarelli" }
]
maintainers = [
  { name = "iceccarelli" }
]
keywords = [
  "robotics",
  "lidar",
  "camera",
  "sensor-fusion",
  "ros2",
  "perception",
  "navigation",
  "mapping",
  "autonomy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=1.24,<3.0",
  "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7.8,<2.0",
  "black>=26.3.1,<27.0",
  "build>=1.2.1,<2.0",
  "mypy>=1.10,<2.0",
  "pip-audit>=2.7.3,<3.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5.0,<1.0",
  "twine>=6.1,<7.0",
  "types-PyYAML>=6.0.12"
]
ros2 = [
  "rclpy>=3.0"
]
sim = [
  "matplotlib>=3.8,<4.0",
  "pandas>=2.2,<3.0"
]
cv = [
  "opencv-python>=4.8,<5.0"
]
ouster = [
  "ouster-sdk>=0.10"
]
realsense = [
  "pyrealsense2>=2.50"
]
all = [
  "bandit[toml]>=1.7.8,<2.0",
  "black>=26.3.1,<27.0",
  "build>=1.2.1,<2.0",
  "matplotlib>=3.8,<4.0",
  "mypy>=1.10,<2.0",
  "opencv-python>=4.8,<5.0",
  "ouster-sdk>=0.10",
  "pandas>=2.2,<3.0",
  "pip-audit>=2.7.3,<3.0",
  "pyrealsense2>=2.50",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "rclpy>=3.0",
  "ruff>=0.5.0,<1.0",
  "twine>=6.1,<7.0",
  "types-PyYAML>=6.0.12"
]

[project.urls]
Homepage = "https://github.com/iceccarelli/robot-lidar-fusion"
Documentation = "https://github.com/iceccarelli/robot-lidar-fusion/tree/main/docs"
Repository = "https://github.com/iceccarelli/robot-lidar-fusion"
Issues = "https://github.com/iceccarelli/robot-lidar-fusion/issues"
Changelog = "https://github.com/iceccarelli/robot-lidar-fusion/blob/main/CHANGELOG.md"
Container = "https://github.com/iceccarelli/robot-lidar-fusion/pkgs/container/robot-lidar-fusion"

[tool.hatch.build.targets.wheel]
packages = ["robot_hw"]

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/calibration",
  "/config",
  "/docs",
  "/examples",
  "/robot_hw",
  "/scripts",
  "/tests",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/Dockerfile",
  "/LICENSE",
  "/Makefile",
  "/README.md",
  "/pyproject.toml"
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
packages = ["robot_hw"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[tool.bandit]
exclude_dirs = ["tests"]
severity = "medium"
confidence = "medium"
